Alignment of checkbox

--- a/style.css
+++ b/style.css
@@ -134,6 +134,10 @@ body {
     align-items: flex-start;
 }
 
+.task label input {
+    margin-top: 3px;
+}
+
 .task label p.checked {
     text-decoration: line-through;
 }
